Drop diagnostics reference to out-dated database.

In 2010, the Thumbnails database was migrated to Favicons.  The
diagnostics code still refers to Thumbnails.  At some point, Thumbnails
has become a directory containing a leveldb.  Attempting to open a
directory as a SQLite database fails with SQLITE_CANTOPEN, causing the
diagnostics code to generate red herrings.

Rename the "thumbnails" cases to "favicons".  Also add in "Top Sites",
which was missing from the diagnostics code.

BUG=617226

Review-Url: https://codereview.chromium.org/2038933002
Cr-Commit-Position: refs/heads/master@{#397949}

Former-commit-id: d31f1808e5bd040d54aca2b7a2a6c9767b5860ec