chrome/browser/diagnostics/sqlite_diagnostics.cc
@@ -245,10 +245,16 @@ DiagnosticsTest* MakeSqliteNssKeyDbTest() {
 }
 #endif  // defined(OS_CHROMEOS)
 
-DiagnosticsTest* MakeSqliteThumbnailsDbTest() {
+DiagnosticsTest* MakeSqliteFaviconsDbTest() {
   return new SqliteIntegrityTest(SqliteIntegrityTest::NO_FLAGS_SET,
-                                 DIAGNOSTICS_SQLITE_INTEGRITY_THUMBNAILS_TEST,
-                                 base::FilePath(history::kThumbnailsFilename));
+                                 DIAGNOSTICS_SQLITE_INTEGRITY_FAVICONS_TEST,
+                                 base::FilePath(history::kFaviconsFilename));
+}
+
+DiagnosticsTest* MakeSqliteTopSitesDbTest() {
+  return new SqliteIntegrityTest(SqliteIntegrityTest::NO_FLAGS_SET,
+                                 DIAGNOSTICS_SQLITE_INTEGRITY_TOPSITES_TEST,
+                                 base::FilePath(history::kTopSitesFilename));
 }
 
 DiagnosticsTest* MakeSqliteWebDataDbTest() {
